# OpenAI_Agent_SDK_Dashboard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  container.yml
dashboard_service/: __init__.py  agents_sdk.py  broker.py  events.py  main.py  publisher.py  settings.py  store.py
dashboard_service/config/: default.dashboard.json  runtime.dashboard.json
dashboard_service/static/: app.js  index.html  styles.css
docs/: agents-sdk-integration.md  architecture.md  configuration.md  container-publishing.md  event-archive.md  live-testing.md  release.md  roadmap.md  security-model.md
examples/: register_trace_processor.py
scripts/: check_public_terms.py  publish_demo_events.py  repo_preflight.py
tests/: test_agents_sdk.py  test_app.py  test_events.py  test_publisher.py  test_settings.py  test_store.py
