[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-agent-sdk-dashboard"
version = "0.1.0"
description = "Self-hosted live dashboard for OpenAI Agents SDK workflow events."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "cubetribe" }]
keywords = ["openai", "agents", "dashboard", "fastapi", "websocket", "observability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "fastapi>=0.115",
  "pydantic-settings>=2.7",
  "redis>=5.2",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "mypy>=1.14",
  "pytest>=8.3",
  "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/cubetribe/OpenAI_Agent_SDK_Dashboard"
Repository = "https://github.com/cubetribe/OpenAI_Agent_SDK_Dashboard"
Issues = "https://github.com/cubetribe/OpenAI_Agent_SDK_Dashboard/issues"

[tool.setuptools.packages.find]
include = ["dashboard_service*"]

[tool.setuptools.package-data]
dashboard_service = ["config/*.json", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
